# grokking-mechanism

./: .gitignore  PLAN.md  README.md  config.py  data.py  main.py  mise.toml  model.py  plot.py  pyproject.toml  train.py
.github/workflows/: deploy-pages.yml
notebooks/: interpretability.ipynb
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: main.ts  protocol.ts  style.css
web/src/dashboard/: chart.ts  heatmap.ts
web/src/ml/: config.ts  dataset.test.ts  dataset.ts  full-preset.smoke.test.ts  model.test.ts  model.ts  trainer.test.ts  trainer.ts  training.worker.ts
